Fix spacing error and duplicate

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,4 +19,4 @@
 
 .cover-bg-blue{background-color:#2275CA;}
 .cover-text-white{color:#FFFFFF;}
-a {color:#FFFFF;}
+.a {color:#FFFFF;}
